--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,9 @@ img{
     grid-template-columns: 55% auto;
     gap: 35px;
 }
-
+.showcase-text {
+    animation: slideInFromLeft 1s ease-in;
+  }
 .showcase-form{
     position: relative;
     top: 50px;
@@ -89,6 +91,8 @@ img{
     padding: 40;
     z-index: 100;
     justify-self: flex-end;
+    animation: slideInFromRight 1s ease-in;
+
 }
 
 .showcase-form .form-control{
@@ -126,6 +130,8 @@ img{
 /* Stats */
 .stats{
     padding-top: 100px;
+    animation: slideInFromBottom 1s ease-in;
+
 }
 
 .stats-heading{
@@ -154,7 +160,9 @@ img{
 }
 
 /* Cloud */
-
+.cloud{
+    background-color: #017ac1;
+}
 .cloud .grid{
     grid-template-columns: 4fr 3fr;
 }
@@ -178,11 +186,156 @@ img{
     transform: translateY(-15px);
 }
 
-/* footer */
-.footer .social a{
-    margin: 0 10px;
+/* Features */
+.features-head img,
+.docs-head img {
+  width: 200px;
+  justify-self: flex-end;
 }
 
+.features-sub-head img {
+  width: 300px;
+  justify-self: flex-end;
+}
+
+.features-main .card > i {
+  margin-right: 20px;
+}
+
+.features-main .grid {
+  padding: 30px;
+}
+
+.features-main .grid > *:first-child {
+  grid-column: 1 / span 3;
+}
+
+.features-main .grid > *:nth-child(2) {
+  grid-column: 1 / span 2;
+}
+
+/* Docs */
+.docs-main h3 {
+  margin: 20px 0;
+}
+
+.docs-main .grid {
+  grid-template-columns: 1fr 2fr;
+  align-items: flex-start;
+}
+
+.docs-main nav li {
+  font-size: 17px;
+  padding-bottom: 5px;
+  margin-bottom: 5px;
+  border-bottom: 1px #ccc solid;
+}
+
+.docs-main a:hover {
+  font-weight: bold;
+}
+.docs-main .form-card{
+    max-height: 330px;
+}
+
+.docs-main  form{
+    position: relative;
+    top: 50px;
+    height: 350px; 
+    width: 100%;
+    padding: 40;
+    z-index: 100;
+    justify-self: flex-end;
+}
+.docs-main form input:focus{
+    outline: none;
+}
+
+.docs-main  form .form-control{
+    margin: 30px 0;
+}
+
+.docs-main  form input[type='text'],
+.docs-main form input[type='email'],
+.docs-main form input[type='password']{
+    border: 0;
+    border-bottom: 1px solid #b4becb;
+    width: 100%;
+    padding: 3px;
+    font-size: 16px;
+}
+
+.docs-main form.sign-up{
+    top: 0;
+    height: 380px;
+}
+
+.docs-main form.login{
+    top: 0;
+    max-height: 200px;
+}
+
+/* Footer */
+.footer .social a {
+    margin: 0 10px;
+  }
+  
+  .fa-github:hover {
+    color: #000000;
+  }
+  
+  .fa-facebook:hover {
+    color: #1773EA;
+  }
+  
+  .fa-instagram:hover {
+    color: #B32E87;
+  }
+  
+  .fa-twitter:hover {
+    color: #1C9CEA;
+  }
+  
+  /* Animations */
+  @keyframes slideInFromLeft {
+    0% {
+      transform: translateX(-100%);
+    }
+  
+    100% {
+      transform: translateX(0);
+    }
+  }
+  
+  @keyframes slideInFromRight {
+    0% {
+      transform: translateX(100%);
+    }
+  
+    100% {
+      transform: translateX(0);
+    }
+  }
+  
+  @keyframes slideInFromTop {
+    0% {
+      transform: translateY(-100%);
+    }
+  
+    100% {
+      transform: translateX(0);
+    }
+  }
+  
+  @keyframes slideInFromBottom {
+    0% {
+      transform: translateY(100%);
+    }
+  
+    100% {
+      transform: translateX(0);
+    }
+  }
 
 /* Tablets and under */
 @media(max-width:768px){
