--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,35 @@ p{
 img{
     width: 100%;
 }
+#loader{
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background-color: #fff;
+    z-index: 9999;
+}
+img.logo-loader{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 200px;
+    height: 200px;
+    transform: translate(-50%, -50%);
+    animation: spinglogo 1.5s linear infinite ;
+}
+@keyframes spinglogo{
+    0%{
+        transform: translate(-50%, -50%) rotate(0deg);
+    }
 
+    100%{
+        transform: translate(-50%, -50%) rotate(360deg);
+    }
+}
+
+@media screen and (max-width:1000px) and (min-width:801px) {
+    
+}
 .navbar{
     background-color: var(--primary-color);
     color: #fff;
@@ -91,7 +119,7 @@ img{
     gap: 35px;
 }
 .showcase-text {
-    animation: slideInFromLeft 1s ease-in;
+    animation: slideInFromLeft 2s ease-in;
   }
 .showcase-form{
     position: relative;
@@ -101,7 +129,7 @@ img{
     padding: 40;
     z-index: 100;
     justify-self: flex-end;
-    animation: slideInFromRight 1s ease-in;
+    animation: slideInFromRight 2s ease-in;
 
 }
 
@@ -152,21 +180,26 @@ img{
 .stats .grid h3{
     font-size: 35px;
 }
-
+.stats .grid i{
+    color: var(--primary-color);
+}
 .stats .grid p{
     font-size: 20px;
     font-weight: bold;
 }
-
+.stats .grid img{
+    width: 60%;
+    height: 150px;
+}
 /* Cli */
 .cli .grid{
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2,1fr);
 }
 
 .cli .grid > *:first-child{
-    grid-column: 1 / span 2;
-    grid-row: 1 / span 2;
+    grid-column: 1 / span 4;
+    grid-row: 1 / span 4;
 }
 
 /* Cloud */
@@ -185,6 +218,16 @@ img{
     text-align: center;
     margin: 18px 10px 40px;
     transition: transform 0.2s ease-in;
+    width: 250px;
+    height: 146px;
+    max-width: 250px;
+    max-height: 146px;   
+    display: flex;
+}
+
+.services .card img{
+        margin: auto;
+        display: block;
 }
 
 .services .card h4{
@@ -373,6 +416,17 @@ img{
     .cli .grid > *:first-child{
         grid-column: 1;
         grid-row: 1 ;
+    }
+    .navbar{
+        height: 110px;
+    }
+
+    .navbar .flex{
+        flex-direction: column;
+    }
+    .navbar ul{
+        padding: 10px;
+        background-color: rgba(0, 0, 0, 0.1);
     }
 }
 
