--- a/css/style.css
+++ b/css/style.css
@@ -259,13 +259,23 @@ img.logo-loader{
   padding: 30px;
 }
 
-.features-main .grid > *:first-child {
+.features-main img {
+    border-radius: 10px;
+}
+
+.features-main  .thumb{
+    min-height: 350px;
+    height: 450px;
+    max-height: 466px;
+}
+
+/* .features-main .grid > *:first-child {
   grid-column: 1 / span 3;
 }
 
 .features-main .grid > *:nth-child(2) {
   grid-column: 1 / span 2;
-}
+} */
 
 /* Docs */
 .docs-main h3 {
